# advent-of-code

./: .gitignore
2022/day02/: main.cc
2022/day03/: main.cc
2022/day07/: main.cc
2022/day08/: main.cc
2022/day10/: main.cc
2022/day11/: part1.cc
2022/day12/: main.cc
2022/day13/: main.cc
2022/day15/: main.cc
2022/day16/: main-debug.cc  main.cc
2022/day17/: CMakeLists.txt  jetPatterns.cc  jetPatterns.hh
2022/day17/tetris/: main.cc
2024/day1/src/: main.rs
2024/day2/src/: main.rs
2024/day3/src/: main.rs
2024/day4/src/: main.rs
2024/day5/src/: main.rs
day06/: main.cc
day09/: main.cc
day1/: a.out  main.cc
day11/: part2.cc
day12/: main.cc
day13/: main.cc
day14/: main.cc
day16/: main.cc
day17/: fallingRocks.hh  main.cc
day17/tetris/: CMakeLists.txt
day18/: CMakeLists.txt  main.cc
day3/: binary_test.cc
day4/: main.cc
day5/: main.cc
